# DNMBcluster

./: .gitignore  BENCHMARK.md  Dockerfile  LICENSE  README.md  SPEED.md  docker-entrypoint.sh  env.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
R/: DESCRIPTION  LICENSE  NAMESPACE
R/R/: ani_pocp_heatmap.R  back_translate.R  category_bar.R  centroid_length_distribution.R  circos_pangenome.R  cluster_size_dist.R  cog_bar.R  context_ribbon.R  core_gene_conservation.R  coverage_scatter.R  cumulative_pan_contribution.R  dnmb_report.R  dtl_reconcile.R  euler_upset_combined.R  export_og_bundles.R  flower_plot.R  functional_bar.R  gain_loss.R  gene_content_mds.R  genome_jaccard_heatmap.R  go_enrichment.R  hog_cut.R  identity_distribution.R  incremental_add.R  load_dnmb.R  ortho_euler.R  ortholog_matrix_plot.R  package.R  pan_core_plot.R  per_og_tree_grid.R  per_og_trees.R  phylo_circular.R  phylo_tree_plot.R  plot_dtl_branch_events.R  plot_dtl_per_og.R  plot_dtl_summary.R  plot_duplication_burden.R  plot_hog_occupancy.R  plot_orthofinder_overview.R  plot_pangenome_landscape.R  (+20 more)
R/man/: DNMBcluster-package.Rd  ancestral_pan_core_sizes.Rd  ani_pocp_heatmap.Rd  annotate_hogs_with_foldseek.Rd  back_translate_og_codons.Rd  category_bar_plot.Rd  centroid_length_distribution.Rd  circos_pangenome.Rd  (+63 more)
tests/: test_cds_fasta.py  test_cli.py  test_cluster_long.py  test_engine_parsers.py  test_fasta_writer.py  test_genbank_parser.py  test_ids.py  test_matrix_pancore.py  test_mmseqs2_parser.py  test_realign.py  test_roary_export.py  test_sidecar.py  test_validation.py
(+55 files in other folders)
